--- a/app/src/main/res/layout/modelo_item.xml
+++ b/app/src/main/res/layout/modelo_item.xml
@@ -4,11 +4,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/idModelo"
-    app:cardElevation="20dp"
-    app:cardCornerRadius="5dp"
     android:layout_width="195dp"
     android:layout_height="300dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
