--- a/app/src/main/res/layout/fragment_modelo_detalhes.xml
+++ b/app/src/main/res/layout/fragment_modelo_detalhes.xml
@@ -21,6 +21,7 @@
             android:src="@drawable/coffee" />
 
         <TextView
+            android:id="@+id/Ncafe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
